--- a/menu.css
+++ b/menu.css
@@ -8,6 +8,9 @@ background:
 }
 
 a{
+	  text-decoration: none;
+    text-decoration: none;
+    color:#5f7a06;
 	font-size:50pt; 
 	display: block;
 	height: 50px
@@ -20,4 +23,54 @@ a{
 	/*background-color: red;*/
 	width: 420px;
 	margin:150px auto 0px auto; 
+}
+
+.a2{
+    text-decoration: none;
+    text-decoration: none;
+    color:#5f7a06;
+    color: #000;
+    font-size: 150%;
+    font-size: 150%;
+    margin-right:5%;
+    margin-right:10%;
+    font-family: 'AkzidenzGrotesk BQ Bold';
+    font-family: 'OpenSans-Bold';
+
+
+
+}
+
+.banner{
+    position: absolute;
+    left: 100px;
+    top: 0px;
+    z-index: -1;
+}
+.banner{
+    text-align: left;
+    padding-top: 30%;
+    padding-left: 10%;
+}
+
+big{
+
+    color: #000;
+    font-size: 150%;
+    font-size: 150%;
+    margin-right:5%;
+    margin-right:10%;
+    font-family: 'AkzidenzGrotesk BQ Bold';
+    font-family: 'OpenSans-Bold';
+
+}
+h3{
+	/*background-color: red;*/
+	width: 420px;
+	margin:100px auto 0px auto; 
+    color: #000;
+    font-size:30pt;
+    font-family: 'AkzidenzGrotesk BQ Bold';
+    padding-top:5%;
+    padding-left:auto;
 }
