--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body{
     background: 
     -webkit-radial-gradient(140%, 
                             circle cover, 
-                            #29b4ff 0%,
-                            #ec82fd 100%);  
+                             #fcfcfc 0%,
+                           #4966eb  100%);  
 }
 
 
@@ -43,7 +43,7 @@ body{
     float: left;
     width: 600px;
     height: 500px;
-    background: url('imagens/cenario.png');
+    background: url('imagens/ceu.png');
     
 
 }
@@ -80,15 +80,16 @@ body{
 
 h3{
     color: #000;
-    font-size: 30pt;
+    font-size: 40pt;
     margin-right:15%;
     margin-right:20%;
     font-family: 'OpenSans-Bold';
     padding-top:2%;
-    padding-left: 45%;
+    padding-left: 43%;
 }
 
 #nivel_jogo{
+    background-color:#4966eb  ;
     border-radius: 5px;
     padding-top: 1%;
     padding-left:5%;
@@ -97,7 +98,7 @@ h3{
     border-radius: 5px;
     box-sizing: border-box;
     margin-right: 5%;
-    margin-left: 45%;
+    margin-left: 43%;
 font-family: 'Arial';
 font-size: 16pt;
 
